<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ingreso">
    <ImageView
        android:id="@+id/btnRetro"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/retroceso" />
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_marginLeft="28dp"
        android:background="@drawable/f_ingreso"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:layout_marginLeft="95dp"/>
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_marginLeft="77dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/icono" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/etEmail"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_correo">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmail"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:scrollHorizontally="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--SOLICITUD DE CONTRASEÑA-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/etPassword"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_contra">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPassword"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="90dp">
        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="150dp"
            android:layout_marginLeft="10dp"
            android:layout_height="40dp"
            android:backgroundTint="#053A6A"
            android:text="@string/btnCcancelar"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_marginLeft="25dp"
            android:layout_height="40dp"
            android:backgroundTint="#053A6A"
            android:text="@string/btnIingresar"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txRegis"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="120dp"
            android:textColor="#636363"
            android:text="@string/registra"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>

